--- a/programacaoOrientadaObjetos/tsconfig.json
+++ b/programacaoOrientadaObjetos/tsconfig.json
@@ -108,6 +108,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src/**/*.ts"],                     // Apenas arquivos na pasta src
-  "exclude": ["node_modules"]            // Ignorar a pasta node_modules
+  "include": ["./src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
