--- a/AtividadeDiagramaDeClasses/package.json
+++ b/AtividadeDiagramaDeClasses/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
+    "type-check": "tsc --noEmit",
     "build": "tsc",
     "start": "node dist/index.js"
   },
